--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   cupertino_icons: ^1.0.2
   google_fonts: ^6.1.0
   flutter_iconly: ^1.0.2
+  flutter_image_slideshow: ^0.1.6
+
 
 dev_dependencies:
   flutter_test:
